--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,20 +8,13 @@
 }
 
 .row:after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
 
-.MuiIconButton-root {
-  min-width: auto;
-}
-
-@media screen and {
-  max-width: 600px;
-}
- {
-  .column {
+@media screen and {max-width: 600px}{
+  .column{
     width: 100%;
   }
 }
